# Polaris

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-project-identity.md  0002-vertical-slice-architecture.md  0003-tensor-framework.md  0004-abstraction-policy.md  0005-registry-dormant.md  README.md
docs/architecture/: package_layout.md
docs/design/: phase_01_foundation.md  phase_02_data.md  phase_03_tokenization.md  phase_04_first_end_to_end_slice.md  phase_05_transformer_encoder.md  phase_06_training_engine.md  phase_07_evaluation_framework.md  phase_08_experiment_tracking.md  phase_09_subword_tokenization.md  phase_10_pretrained_embeddings.md  phase_11_self_supervised_pretraining.md  phase_12_deployment_and_cli.md  phase_13_v1_stabilization.md  phase_14_interactive_console.md
examples/: pretrain_finetune_imdb.py  train_imdb_sentiment.py
polaris/: __init__.py  cli.py  errors.py
polaris/collation/: README.md  __init__.py  batch.py  collator.py  contrastive.py  pairs.py
polaris/console/: README.md  __init__.py  banner.py  repl.py
polaris/core/: README.md  interfaces.py  types.py
polaris/data/: README.md  __init__.py  base.py  sample.py
polaris/data/datasets/: README.md  __init__.py  imdb.py
polaris/deployment/: README.md  __init__.py  app.py
polaris/embeddings/: README.md  __init__.py  glove.py
polaris/engine/: README.md
polaris/evaluation/: README.md  __init__.py  metrics.py  report.py
polaris/experiments/: README.md  __init__.py  environment.py  tracker.py
polaris/inference/: README.md  __init__.py  bundle.py  embedding.py  factory.py  predictor.py
polaris/models/: README.md  __init__.py  attention.py  embedder.py  pair_classifier.py  pooling.py  pooling_classifier.py  transformer.py  transformer_classifier.py  transformer_encoder.py
polaris/plugins/: README.md
polaris/pretraining/: README.md  __init__.py  loop.py  masking.py  model.py
polaris/registry/: README.md  __init__.py  registry.py
polaris/tokenizers/: README.md  __init__.py  bpe.py  encoding.py  tokenizer.py  vocabulary.py  vocabulary_builder.py  whitespace.py
polaris/training/: README.md  __init__.py  checkpoint.py  config.py  contrastive.py  loop.py  losses.py  scheduler.py  trainer.py
polaris/utils/: README.md  __init__.py  device.py  logging.py  seed.py
polaris/visualization/: README.md
tests/: __init__.py
tests/unit/: test_cli.py  test_end_to_end.py  test_smoke.py
tests/unit/collation/: test_batch.py  test_collator.py  test_contrastive_collation.py  test_pairs.py
tests/unit/console/: test_banner.py  test_repl.py
tests/unit/core/: test_interfaces.py
tests/unit/deployment/: test_app.py
tests/unit/embeddings/: test_glove.py
tests/unit/evaluation/: test_metrics.py  test_report.py
tests/unit/experiments/: test_environment.py  test_tracker.py
tests/unit/inference/: test_bundle.py  test_embedding.py  test_factory.py  test_predictor.py
tests/unit/models/: test_attention.py  test_embedder.py  test_pair_classifier.py  test_pooling.py  test_pooling_classifier.py  test_transformer.py  test_transformer_classifier.py  test_transformer_encoder.py
tests/unit/pretraining/: test_masking.py  test_model.py  test_pretrain_finetune.py  test_pretrain_loop.py
tests/unit/registry/: test_registry.py
tests/unit/tokenizers/: test_bpe.py  test_encoding.py  test_tokenizer.py  test_vocabulary.py  test_vocabulary_builder.py  test_whitespace.py
tests/unit/training/: test_checkpoint.py  test_config.py  test_contrastive_driver.py  test_loop.py  test_losses.py  test_scheduler.py  test_trainer.py
(+4 files in other folders)
