[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "polaris-nlp"
version = "0.7.0.dev0"
description = "A production-inspired open-source NLP engineering platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Satya Sai Nischal" }
]

keywords = [
    "nlp",
    "machine-learning",
    "deep-learning",
    "transformers",
    "natural-language-processing",
    "python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.16.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
]

datasets = [
    "datasets>=4.0.0",
]

torch = [
    "torch>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/cattolatte/Polaris"
Repository = "https://github.com/cattolatte/Polaris"
Issues = "https://github.com/cattolatte/Polaris/issues"

[project.scripts]
polaris = "polaris.cli:app"

# ============================================================
# Hatchling
# ============================================================

[tool.hatch.build.targets.wheel]
packages = ["polaris"]

# ============================================================
# Black
# ============================================================

[tool.black]
line-length = 88
target-version = ["py312"]

# ============================================================
# Ruff
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "C4",   # comprehensions
]

ignore = []

# ============================================================
# MyPy
# ============================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

# ============================================================
# Pytest
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
]

# ============================================================
# Coverage
# ============================================================

[tool.coverage.run]
source = ["polaris"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

# ============================================================
# uv — dependency sources
# ============================================================

# Install the CPU-only PyTorch build on Linux (e.g. CI) to avoid pulling the
# large CUDA wheels. macOS and Windows use the default PyPI wheels.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.hatch.build.targets.sdist]
include = [
    "/polaris",
    "/tests",
    "/README.md",
    "/LICENSE",
]